--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.1.0",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
