--- a/package.json
+++ b/package.json
@@ -26,21 +26,27 @@
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.553.0",
     "next": "15.5.6",
     "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "19.1.0",
     "sweetalert2": "^11.26.3",
+    "sweetalert2-react-content": "^5.1.1",
     "tailwind-merge": "^3.4.0",
+    "use-sound": "^5.0.0",
     "xlsx": "^0.18.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
