--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.553.0",
-    "next": "15.5.6",
+    "next": "^15.5.12",
     "nextjs-toploader": "^3.9.17",
     "react": "19.1.0",
     "react-countdown-circle-timer": "^3.2.1",
